[package]
name = "git-graph"
version = "0.6.0"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
description = "Command line tool to show clear git graphs arranged for your branching model"
repository = "https://github.com/mlange-42/git-graph.git"
keywords = ["git", "graph"]
license = "MIT"
readme = "README.md"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false

[dependencies]
git2 = {version = "0.20", default-features = false, optional = true}
gix = {version = "0.72.1", default-features = false, optional = true}
regex = {version = "1.7", default-features = false, optional = false, features = ["std"]}
serde = "1.0"
serde_derive = {version = "1.0", default-features = false, optional = false}
toml = "0.5"
itertools = "0.10"
svg = "0.12"
clap = {version = "4.0", optional = false, features = ["cargo"]}
lazy_static = "1.4"
yansi = "0.5"
atty = "0.2"
platform-dirs = "0.3"
crossterm = {version = "0.25", optional = false}
chrono = {version = "0.4", optional = false}
textwrap = {version = "0.16", default-features = false, optional = false, features = ["unicode-width"]}
tracing = "0.1.41"

[features]

# Using the library with defaults will give you the git2 backend
default = ["git2-backend"]

# Include default git backend. If left out you must push data to GitGraph
git2-backend = ["dep:git2"]

# Git Oxide gix backend. This is only used by the example change_backend
gix-backend = ["dep:gix"]


[[bin]]
name = "git-graph"
default-features = true

[[example]]
name = "change_backend"
doc = true
default-features = false
required-features = ["gix-backend"]
